Flex display working like a charm. Next steps are implementing modal popups for projects, and fixing cavas nodes so that they display properly on mobile.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,6 @@ body {
 
 nav {
   margin: auto;
-  /* position: absolute; */
   width: 70%;
   text-align: center;
   display: flex;
@@ -58,8 +57,6 @@ canvas {
   position: absolute;
   top: 0;
   left: 0;
-  /* width: 100%;
-  height: 100%; */
   background-color: rgb(0, 24, 48);
 }
 
@@ -140,12 +137,12 @@ canvas {
   padding: 1rem;
 }
 
-#wrap {
-  width: 80%;
-  height: 100%;
-  display: inline-flexbox;
-  position: inherit;
-  /* justify-content: center; */
+#wrapper {
+  display: flex;
+  /* margin: auto; */
+  /* position: inherit; */
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 .demo {
